--- a/2017-06-28-debian-post-install.org
+++ b/2017-06-28-debian-post-install.org
@@ -124,6 +124,8 @@ tags: [post-installation, arrangement, automation]
 
 ** Docker
 
+   Initial source is an official ~Docker~ [[https://docs.docker.com/engine/installation/linux/docker-ce/debian/][site]]
+
    #+BEGIN_EXAMPLE
      # apt-get remove docker docker-engine docker.io
      # apt-get update
@@ -144,6 +146,8 @@ tags: [post-installation, arrangement, automation]
 
    #+RESULTS:
    : Docker version 17.06.0-ce, build 02c1d87
+
+   Post-installation [[https://docs.docker.com/engine/installation/linux/linux-postinstall/][procedures]]
 
 ** Jenkins
    Jenkins is an open source continuous integration tool written in
